src/test/ui/rfc-2565-param-attrs/proc-macro-cannot-be-used.stderr
error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:10:23
   |
LL | extern "C" { fn ffi(#[id] arg1: i32, #[id] ...); }
   |                       ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:10:40
   |
LL | extern "C" { fn ffi(#[id] arg1: i32, #[id] ...); }
   |                                        ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:14:40
   |
LL | unsafe extern "C" fn cvar(arg1: i32, #[id] mut args: ...) {}
   |                                        ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:17:30
   |
LL | type Alias = extern "C" fn(#[id] u8, #[id] ...);
   |                              ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:17:40
   |
LL | type Alias = extern "C" fn(#[id] u8, #[id] ...);
   |                                        ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:21:11
   |
LL | fn free(#[id] arg1: u8) {
   |           ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:23:18
   |
LL |     let lam = |#[id] W(x), #[id] y: usize| ();
   |                  ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:23:30
   |
LL |     let lam = |#[id] W(x), #[id] y: usize| ();
   |                              ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:29:20
   |
LL |     fn inherent1(#[id] self, #[id] arg1: u8) {}
   |                    ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:29:32
   |
LL |     fn inherent1(#[id] self, #[id] arg1: u8) {}
   |                                ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:32:20
   |
LL |     fn inherent2(#[id] &self, #[id] arg1: u8) {}
   |                    ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:32:33
   |
LL |     fn inherent2(#[id] &self, #[id] arg1: u8) {}
   |                                 ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:35:24
   |
LL |     fn inherent3<'a>(#[id] &'a mut self, #[id] arg1: u8) {}
   |                        ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:35:44
   |
LL |     fn inherent3<'a>(#[id] &'a mut self, #[id] arg1: u8) {}
   |                                            ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:38:24
   |
LL |     fn inherent4<'a>(#[id] self: Box<Self>, #[id] arg1: u8) {}
   |                        ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:38:47
   |
LL |     fn inherent4<'a>(#[id] self: Box<Self>, #[id] arg1: u8) {}
   |                                               ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:41:40
   |
LL |     fn issue_64682_associated_fn<'a>(#[id] arg1: u8, #[id] arg2: u8) {}
   |                                        ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:41:56
   |
LL |     fn issue_64682_associated_fn<'a>(#[id] arg1: u8, #[id] arg2: u8) {}
   |                                                        ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:47:17
   |
LL |     fn trait1(#[id] self, #[id] arg1: u8);
   |                 ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:47:29
   |
LL |     fn trait1(#[id] self, #[id] arg1: u8);
   |                             ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:50:17
   |
LL |     fn trait2(#[id] &self, #[id] arg1: u8);
   |                 ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:50:30
   |
LL |     fn trait2(#[id] &self, #[id] arg1: u8);
   |                              ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:53:21
   |
LL |     fn trait3<'a>(#[id] &'a mut self, #[id] arg1: u8);
   |                     ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:53:41
   |
LL |     fn trait3<'a>(#[id] &'a mut self, #[id] arg1: u8);
   |                                         ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:56:21
   |
LL |     fn trait4<'a>(#[id] self: Box<Self>, #[id] arg1: u8, #[id] Vec<u8>);
   |                     ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:56:44
   |
LL |     fn trait4<'a>(#[id] self: Box<Self>, #[id] arg1: u8, #[id] Vec<u8>);
   |                                            ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:56:60
   |
LL |     fn trait4<'a>(#[id] self: Box<Self>, #[id] arg1: u8, #[id] Vec<u8>);
   |                                                            ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:60:40
   |
LL |     fn issue_64682_associated_fn<'a>(#[id] arg1: u8, #[id] arg2: u8);
   |                                        ^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `id`
  --> $DIR/proc-macro-cannot-be-used.rs:60:56
   |
LL |     fn issue_64682_associated_fn<'a>(#[id] arg1: u8, #[id] arg2: u8);
   |                                                        ^^ not a non-macro attribute

error: aborting due to 29 previous errors

